Modificou o CSS e HTML

--- a/Html/index.html
+++ b/Html/index.html
@@ -4,32 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="../CASA ABERTA/logo/Imagens/Real ou fake-sem-fundo.png">
-    <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="../CASA ABERTA/bootstrap/bootstrap.css">
-    <script type="text/javascript" src="../CASA ABERTA/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="../CASA ABERTA/css/style.css">
+    <link rel="icon" href="../Imagems/logo/Real ou fake-sem-fundo.png" id="icon">
+    <link rel="stylesheet" href="../Css/style.css">
+    <title>Real ou Feiki</title>
 </head>
 <body>
-
-    <nav class="navbar" style="background-color: #175b8b;">
-        <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid barra-navegacao">
-            <img src="../CASA ABERTA/logo/Imagens/Real ou fake-sem-fundo.png">
-            <a class="navbar-brand" href="#">Navbar</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-                <a class="nav-link" href="#">Features</a>
-                <a class="nav-link" href="#">Pricing</a>
-                <a class="nav-link disabled">Disabled</a>
-            </div>
-            </div>
+    <div class="nav-bar">
+        <div class="logo-nav">
+            <img src="../Imagems/logo/Real ou fake-sem-fundo.png" alt="logo-site" class="logo-site">
         </div>
-    </nav>
- </nav>   
+        <div class="link-nav">
+            <a href="#" class="links">Inicio</a>
+            <a href="#" class="links">pag.2</a>
+        </div>
+    </div>
+
+    <div class="base-conteudo">
+
+    </div>
 </body>
 </html>
