--- a/Html/pag2.html
+++ b/Html/pag2.html
@@ -17,13 +17,15 @@
         </div>
         <div class="link-nav">
             <a href="../Html/index.html" class="links"><button type="button" class="btn btn-outline-info" hre>Home</button></a>
-            <a href="../Html/pag2.html" class="links"><button type="button" class="btn btn-outline-info">pag.2</button></a>
+            <a href="../Html/pag2.html" class="links"><button type="button" class="btn btn-outline-info">Exemplo de Fake News</button></a>
         </div>
     </div>
-
+        <center><h1>Exemplo de Fake News</h1></center>
+                <br>
     <div class="base-conteudo">
-                <h1>exemplo de fake news</h1>
+                
                 <ul>
+                    <div class="imagem-covid"><img src="../Imagens/Covid.png" alt="Image" height="300" width="300"></div>
                     <h2><li>A vacina contra a Covid-19 vai modificar o DNA dos seres humanos – FAKE NEWS</h2></li>
                     <p>Segundo a BBC News, essa teoria iniciou com um vídeo de Carrie Madej, osteopata americana, em grupos antivacina. Essa fake news afirma que a vacina mudaria o DNA humano, criando uma “nova espécie e, talvez, destruindo a nossa”. </p>
                     <p>Especialistas esclareceram para agências de checagem e portais de notícias que as vacinas usam uma técnica inédita, o RNA mensageiro. Ele faz com que parte do material genético do coronavírus, seja absorvido por nossas células, para elas produzirem uma proteína característica que será detectada pelo sistema imunológico. </p>
@@ -33,10 +35,10 @@
                     <p>Circulam pelas redes sociais vídeos que afirmam que as vacinas foram desenvolvidas para controlar a população. Segundo o G1, os vídeos dizem que “o plasma dessa vacina, que é o líquido, vem com uma codificação que traz uma leitura para inteligência artificial, então eles têm o nosso controle através disso. É como se fosse um chip, mas de forma líquida, que é o plasma”. </p>
                     <p>O G1 consultou especialistas nas áreas de biomedicina, inteligência artificial e microeletrônica. Todos refutaram a teoria e os argumentos, explicando que não existem chips líquidos, muito menos capazes de controlar a pessoa. </p>
                     <p>A presidente da Sociedade Brasileira de Microeletrônica, Linnyer Beatrys Ruiz Aylon, explicou para o G1 que “apesar de todo desenvolvimento que temos conseguido com o silício e de produzirmos quintilhões de dispositivos no mundo, não existem chips líquidos ou solúveis em plasma ou sangue e tampouco chips que possam estar ‘escondidos’ em vacinas. Em nosso conhecimento, isso não é possível. Fake news.” </p>
-                    
+                    <div class="imagem-papa"><img src="../Imagens/Papa de Jaqueta.png" alt="Image" height="300" width="300"></div><br><br>
                     <h2><li>Montagem com a foto do papa</h2></li>
-                    <p>uma foto do Papa Francisco usando uma jaqueta branca modelo drip cheia de estilo viralizou nas redes sociais. Embora tenham surgido várias teorias envolvendo o flagra, a imagem não é verídica: foi criada por Inteligência Artificial (IA). </p>
-                    <p>Supostamente, o casaco seria uma criação do estilista italiano Filippo Sorcinelli, que, de fato, desenvolve projetos para o Vaticano, já tendo desenhado outras peças para esse papa e também para seu antecessor, Bento XVI. </p>
+                    <div class="texto-papa"></div><p>Uma foto do Papa Francisco usando uma jaqueta branca modelo drip cheia de estilo viralizou nas redes sociais. Embora tenham surgido várias teorias envolvendo o flagra, a imagem não é verídica: foi criada por Inteligência Artificial (IA). </p>
+                    <p>Supostamente, o casaco seria uma criação do estilista italiano Filippo Sorcinelli, que, de fato, desenvolve projetos para o Vaticano, já tendo desenhado outras peças para esse papa e também para seu antecessor, Bento XVI. </p></div>
                     <p>Primeiro, a foto foi publicada no Reddit, uma comunidade de fóruns online, na página do Midjourney, que reúne criações feitas na ferramenta de IA que permite criar imagens hiper-realistas a partir de uma descrição. </p>
                     <p>Bastou alguém postar a foto no Twitter para ela logo viralizar, gerando uma onda de memes com o pontífice. </p>
 
