Modificação do Nav-bar

--- a/Html/index.html
+++ b/Html/index.html
@@ -16,7 +16,7 @@
             <img src="../Imagems/logo/Real ou fake-sem-fundo.png" alt="logo-site" class="logo-site">
         </div>
         <div class="link-nav">
-            <a href="../Html/index.html" class="links"><button type="button" class="btn btn-outline-info" hre>Home</button></a>
+            <a href="../Html/index.html" class="links" ><button type="button" class="btn btn-outline-info" id="home">Inicio</button></a>
             <a href="../Html/pag2.html" class="links"><button type="button" class="btn btn-outline-info">Exemplos de Fake News</button></a>
         </div>
     </div>
