--- a/Html/pag2.html
+++ b/Html/pag2.html
@@ -16,8 +16,8 @@
             <img src="../Imagems/logo/Real ou fake-sem-fundo.png" alt="logo-site" class="logo-site">
         </div>
         <div class="link-nav">
-            <a href="../Html/index.html" class="links"><button type="button" class="btn btn-outline-info" hre>Home</button></a>
-            <a href="../Html/pag2.html" class="links"><button type="button" class="btn btn-outline-info">Exemplo de Fake News</button></a>
+            <a href="../Html/index.html" class="links"><button type="button" class="btn btn-outline-info">Inicio</button></a>
+            <a href="../Html/pag2.html" class="links"><button type="button" class="btn btn-outline-info">Exemplos de Fake News</button></a>
         </div>
     </div>
         <center><h1>Exemplo de Fake News</h1></center>
