--- a/Html/pag2.html
+++ b/Html/pag2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="../Imagems/logo/Real ou fake-sem-fundo.png" id="icon">
+    <link rel="icon" href="../Imagens/logo/Real ou fake-sem-fundo.png" id="icon">
     <link rel="stylesheet" href="../Css/style.css">
     <link rel="stylesheet" href="../Bootstrap/Css/bootstrap.css">
     <script type="text/javascript" src="../Bootstrap/Js/bootstrap.bundle.min.js"></script>
@@ -13,11 +13,12 @@
 <body>
     <div class="nav-bar">
         <div class="logo-nav">
-            <img src="../Imagems/logo/Real ou fake-sem-fundo.png" alt="logo-site" class="logo-site">
+            <img src="../Imagens/logo/Real ou fake-sem-fundo.png" alt="logo-site" class="logo-site">
         </div>
         <div class="link-nav">
             <a href="../Html/index.html" class="links"><button type="button" class="btn btn-outline-info">Inicio</button></a>
             <a href="../Html/pag2.html" class="links"><button type="button" class="btn btn-outline-info">Exemplos de Fake News</button></a>
+            <a href="#" class="links"><button type="button" class="btn btn-outline-info">Slide</button></a>
         </div>
     </div>
         <center><h1>Exemplo de Fake News</h1></center>
