Adicionamento da página Slide

--- a/Html/pag2.html
+++ b/Html/pag2.html
@@ -18,7 +18,7 @@
         <div class="link-nav">
             <a href="../Html/index.html" class="links"><button type="button" class="btn btn-outline-info">Inicio</button></a>
             <a href="../Html/pag2.html" class="links"><button type="button" class="btn btn-outline-info">Exemplos de Fake News</button></a>
-            <a href="#" class="links"><button type="button" class="btn btn-outline-info">Slide</button></a>
+            <a href="../Html/slide.html" class="links"><button type="button" class="btn btn-outline-info">Slide</button></a>
         </div>
     </div>
         <center><h1>Exemplo de Fake News</h1></center>
