--- a/Html/index.html
+++ b/Html/index.html
@@ -18,7 +18,7 @@
         <div class="link-nav">
             <a href="../Html/index.html" class="links" ><button type="button" class="btn btn-outline-info" id="home">Inicio</button></a>
             <a href="../Html/pag2.html" class="links"><button type="button" class="btn btn-outline-info">Exemplos de Fake News</button></a>
-            <a href="#" class="links"><button type="button" class="btn btn-outline-info">Slide</button></a>
+            <a href="../Html/slide.html" class="links"><button type="button" class="btn btn-outline-info">Slide</button></a>
         </div>
     </div>
     <div class="imagem-fake-news"><img src="..//Imagens/Imagem Fake News.png" alt="Image" height="500" width="750"></div>
