adicionamento dos slides

--- a/Html/slide.html
+++ b/Html/slide.html
@@ -22,3 +22,5 @@
             <a href="../Html/slide.html" class="links"><button type="button" class="btn btn-outline-info">Slide</button></a>
         </div>
     </div>
+
+    <img src="../Slide/Document Cloud/apresentação fake news etec-part-1.pdf" alt="slide">
