--- a/Html/index.html
+++ b/Html/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="../Css/style.css">
     <link rel="stylesheet" href="../Bootstrap/Css/bootstrap.css">
     <script type="text/javascript" src="../Bootstrap/Js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <title>Real ou Feiki</title>
 </head>
 <body>
