correção botãodo bootstrap

--- a/Html/slide.html
+++ b/Html/slide.html
@@ -13,16 +13,18 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-    <div class="nav-bar">
-        <div class="logo-nav">
-            <img src="../Imagens/logo/Real ou fake-sem-fundo.png" alt="logo-site" class="logo-site">
-        </div>
-        <div class="link-nav">
-            <a href="../Html/index.html" class="links"><button type="button" class="btn btn-outline-info" >Inicio</button></a>
-            <a href="../Html/pag2.html" class="links"><button type="button" class="btn btn-outline-info">Exemplos de Fake News</button></a>
-            <a href="../Html/slide.html" class="links"><button type="button" class="btn btn-outline-info">Slide</button></a>
-        </div>
+  <div class="nav-bar">
+    <div class="logo-nav">
+        <img src="../Imagens/logo/Real ou fake-sem-fundo.png" alt="logo-site" class="logo-site">
     </div>
+    <div class="link-nav">
+        <ul>
+            <li class="links"><a href="../Html/index.html">Inicio</a></li>
+            <li class="links"><a href="../Html/pag2.html">Exemplos de Fake News</a></li>
+            <li class="links"><a href="../Html/slide.html">Slide</a></li>
+        </ul>
+    </div>
+</div>
     <div id="tamanho-slide">
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
@@ -33,7 +35,6 @@
               <li data-target="#myCarousel" data-slide-to="4"></li>
               <li data-target="#myCarousel" data-slide-to="5"></li>
               <li data-target="#myCarousel" data-slide-to="6"></li>
-              <li data-target="#myCarousel" data-slide-to="7"></li>
             </ol>
           
             <div class="carousel-inner">
@@ -59,9 +60,6 @@
               </div>
               <div class="item">
                 <img src="../Slide/apresentação-fake-news-etec-part-7.png" alt="Imagem 7">
-              </div>
-              <div class="item">
-                <img src="../Slide/apresentação-fake-news-etec-part-8.png" alt="Imagem 8">
               </div>
             </div>
           </div>
