Redimencionamento do Slide-Show & remodelagem nos botoẽs de atalho

--- a/Html/slide.html
+++ b/Html/slide.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../Imagens/logo/Real ou fake-sem-fundo.png">
-    <link rel="stylesheet" href="../Css/style.css">
     <link rel="stylesheet" href="../Bootstrap/Css/bootstrap.css">
+    <link rel="stylesheet" href="../Css/Carrossel.css">
     <title>Real ou Feiki</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -25,6 +25,7 @@
         </ul>
     </div>
 </div>
+<br>
     <div id="tamanho-slide">
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
@@ -71,7 +72,14 @@
             });
           </script>
     </div>
-    
+    <br>
+    <div class="linha">
+    </div>
+<br>
+    <div id="creditos">
+        Direitos reservados ao grupo Real-ou-Feiki©
+        <br>
+    </div>
       
 </body>
 </html>
