--- a/Html/pag2.html
+++ b/Html/pag2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="../Imagens/logo/Real ou fake-sem-fundo.png" id="icon">
+    <link rel="icon" href="../Imagens/logo/Real ou fake-sem-fundo.png">
     <link rel="stylesheet" href="../Css/style.css">
     <link rel="stylesheet" href="../Bootstrap/Css/bootstrap.css">
     <script type="text/javascript" src="../Bootstrap/Js/bootstrap.bundle.min.js"></script>
@@ -26,7 +26,6 @@
             </ul>
         </div>
     </div>
-        
     <div class="base-conteudo">
                     <center><h1>Exemplo de Fake News</h1></center>
                     <br>
