Adicionamento da div de cor no site

--- a/Html/slide.html
+++ b/Html/slide.html
@@ -17,7 +17,7 @@
     <div class="logo-nav">
         <img src="../Imagens/logo/Real ou fake-sem-fundo.png" alt="logo-site" class="logo-site">
     </div>
-    <div class="link-nav">
+    <div class="link-nav"><br><h1 style="color: white; padding-left: 31%; font-size: 40px;"><b>Fato ou Fake</b></h1>
         <ul>
             <li class="links"><a href="../Html/index.html">Inicio</a></li>
             <li class="links"><a href="../Html/pag2.html">Exemplos de Fake News</a></li>
